force-app/main/default/objects/Branch_and_Zone__c/Branch_and_Zone__c.object-meta.xml
<CustomObject>
    <label>Branch and Zone</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch and Zone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>