force-app/main/default/objects/Branch_and_Zone__c/fields/BB_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>BB_Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BB Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>