force-app/main/default/objects/Branch_and_Zone__c/fields/Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type__c</fullName>
    <label>Branch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BKK</fullName>
            </value>
            <value>
                <fullName>UPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>