force-app/main/default/objects/Branch_and_Zone__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>