force-app/main/default/objects/Branch_and_Zone__c/fields/Region_Code_BB__c.field-meta.xml
<CustomField>
    <fullName>Region_Code_BB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Code (BB)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>