force-app/main/default/objects/Branch_and_Zone__c/fields/Region_ME__c.field-meta.xml
<CustomField>
    <fullName>Region_ME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region (ME)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>