force-app/main/default/objects/Branch_and_Zone__c/fields/RMC_User__c.field-meta.xml
<CustomField>
    <fullName>RMC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_and_Zone</relationshipName>
    <type>Lookup</type>
</CustomField>