force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Address__c.field-meta.xml
<CustomField>
    <fullName>RTL_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>