force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Branch_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Contact_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Contact Number</label>
    <type>Phone</type>
</CustomField>