force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Branch_Manager_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to keep Branch Manager for each from , implement on CR Referral Enhancement 22 Aug</description>
    <label>Branch Manager User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_and_Zone1</relationshipName>
    <type>Lookup</type>
</CustomField>