force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Branch_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Name_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Name (EN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>