force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Operating_Days_EN__c.field-meta.xml
<CustomField>
    <fullName>RTL_Operating_Days_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating Days (EN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>