force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Operating_Days_TH__c.field-meta.xml
<CustomField>
    <fullName>RTL_Operating_Days_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating Days (TH)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>