force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Region_Retail__c.field-meta.xml
<CustomField>
    <fullName>RTL_Region_Retail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region (Retail)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>