force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Wealth_RM_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Wealth_RM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wealth RM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_and_Zone2</relationshipName>
    <type>Lookup</type>
</CustomField>