force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Working_Date_Hours__c.field-meta.xml
<CustomField>
    <fullName>RTL_Working_Date_Hours__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>