force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Zone__c.field-meta.xml
<CustomField>
    <fullName>RTL_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone (Retail)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>