force-app/main/default/objects/Branch_and_Zone__c/fields/RTL_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Zone_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone Code (Retail)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>