force-app/main/default/objects/Branch_and_Zone__c/fields/SE_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>SE_Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SE Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>