force-app/main/default/objects/Branch_and_Zone__c/fields/Zone_BB__c.field-meta.xml
<CustomField>
    <fullName>Zone_BB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone (BB)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>