force-app/main/default/objects/Branch_and_Zone__c/fields/Zone_Code_ME__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code_ME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone Code (ME)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>