force-app/main/default/objects/Branch_and_Zone__c/fields/Zone_ME__c.field-meta.xml
<CustomField>
    <fullName>Zone_ME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone (ME)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>