force-app/main/default/objects/Branch_and_Zone__c/validationRules/Check_profile_when_edit_branch_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_profile_when_edit_branch_name</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISCHANGED( Name ), $Profile.Name &lt;&gt; &quot;TMB CRM Admin Profile&quot; &amp;&amp; NOT(CONTAINS($Profile.Name, &quot;System Administrator&quot;)) ,FALSE)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You have no authorize to edit branch name</errorMessage>
</ValidationRule>