force-app/main/default/objects/Branch_and_Zone__c/listViews/All_Active_Branch.listView-meta.xml
<ListView>
    <fullName>All_Active_Branch</fullName>
    <columns>NAME</columns>
    <columns>Branch_Code__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Zone_Code_SE__c</columns>
    <columns>Zone_SE__c</columns>
    <columns>Region_Code_SE__c</columns>
    <columns>Region_SE__c</columns>
    <columns>Zone_Code_ME__c</columns>
    <columns>Zone_ME__c</columns>
    <columns>Region_Code_ME__c</columns>
    <columns>Region_ME__c</columns>
    <columns>Zone_Code_BB__c</columns>
    <columns>Zone_BB__c</columns>
    <columns>Region_Code_BB__c</columns>
    <columns>Branch_Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Branch</label>
</ListView>